tests/compile_fail/try_catch_exception_lifetime.stderr
error[E0597]: `hs` does not live long enough
  --> $DIR/try_catch_exception_lifetime.rs:11:14
   |
9  |   let _exception = {
   |       ---------- borrow later stored here
10 |     let mut hs = v8::HandleScope::new(&mut isolate);
11 |     let hs = hs.enter();
   |              ^^ borrowed value does not live long enough
12 |     try_catch.exception(hs).unwrap()
13 |   };
   |   - `hs` dropped here while still borrowed
